# lemonad

./: CHANGELOG.md  README.md  blog  lemonad.cabal  server.phar
app/: Main  Main.hi  Main.hs
examples/: Blog.hs
src/: Lemonad.hs
