cabal-version:      2.4
name:               lemonad
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Majkel
maintainer:         tenmajkl@proton.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: Lemonad
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable examples.blog
  main-is: blog.hs
  hs-source-dirs: examples
  build-depends: base, lemonad
